# vv-esp

./: .gitignore  CMakeLists.txt  CONFIG.md  Kconfig.projbuild  README.md  README_BAIDU_AGENT.md  USAGE.md  build_assets.py  partitions.csv  sdkconfig  sdkconfig.defaults
.kilocode/rules/: vv-esp.md
components/baidu_agent/: CMakeLists.txt  baidu_agent_client.c  baidu_agent_client.h  baidu_agent_json.c  baidu_agent_json.h  baidu_agent_sse.c  baidu_agent_sse.h  baidu_agent_types.h
components/font_manager/: CMakeLists.txt  font_manager.c  font_manager.h
components/tts_service/: CMakeLists.txt  streaming_tts.c  streaming_tts.h  tts_service.c  tts_service.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
main/: CMakeLists.txt  baidu_agent_client.c  hello_world_main.c  idf_component.yml  main.c  mmap_generate_assets.h  wifi_manager.h
